--- a/Presentacion.tex
+++ b/Presentacion.tex
@@ -24,7 +24,7 @@ Me gusta investigar y aprender sobre nuevas tecnologías, ademas de ampliar mis 
 
 % Sección de habilidades, con escala del 0 al 6 y decimales
 % \skills{{pursuer of rabbits/5.8},{good manners/4},{outgoing/4.3},{polite/4},{Java/0.01}}
-\skills{{Assembly/4.0},{C/5.2},{C++/3.6},{C\#/1.2},{Java/2.8},{Motores gráficos (Unreal y Unity)/3.2},{Software de ofimática/2.6},{CAD y CAM/1.5},{Latex/3},{Flutter/1}}
+\skills{{Assembly/4.0},{C/5.2},{C++/3.6},{C\#/1.2},{Rust/0.5},{Motores gráficos (Unreal y Unity)/3.2},{Software de ofimática/2.6},{CAD y CAM/1.5},{Latex/3},{Flutter/1}}
 
 % Texto añadido sobre las habilidades personales
 % \skillstext{{lovely/4},{narcissistic/3}}
@@ -80,19 +80,22 @@ Siempre aprender sobre tecnologías emergentes y especializarme el la creación 
 	\twentyitem{2021}{Crédito sobre gestión del mantenimiento.}{Completo}{Orientado al mantenimiento industrial.}
 	\twentyitem{2021}{Crédito de industria 4.0.}{Completo}{Orientado a la implementación de tecnologías Smart Factory para industria.}
 	\twentyitem{2021}{Crédito de programación en VHDL.}{Completo}{Orientado a la programación de FPGA.}
-	\twentyitem{2022}{Curso de Flutter.}{En curso}{Orientado a la programación para Android, IOS y Web.}
+	\twentyitem{2022}{Curso de Flutter.}{Completo}{Orientado a la programación para Android, IOS y Web.}
+	\twentyitem{2022}{Curso de Rust.}{En proceso}{Orientado al desarrollo Web y Bare Metal.}
 \end{twenty}
 
-\section{Referencias}
+%\section{Referencias}
 
-Ing. Daniel Gil, Grupo Dilfer (Concordia). Teléfono: +5493454108910. E-mail: \href{mailto: danielgil@dilfer.com.ar}{danielgil@dilfer.com.ar}.
+%Ing. Daniel Gil, Grupo Dilfer (Concordia). Teléfono: +5493454108910. E-mail: \href{mailto: danielgil@dilfer.com.ar}{danielgil@dilfer.com.ar}.
 
 %%%%%%%%%%%%%%%%%%%%%%% Segunda página %%%%%%%%%%%%%%%%%%%%%%%%
 %\newpage
 
-%\makeprofile
+%\newgeometry{left=2.5cm,top=1cm,right=1cm,bottom=1cm,nohead,nofoot}
 
 %\section{Mas info}
+
+%Mas información
 
 \end{document}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
