--- a/Presentacion.tex
+++ b/Presentacion.tex
@@ -1,4 +1,4 @@
-%%%%%%%%%%%%%%%%%%%%% Libreria para el cv %%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%% Librería para el cv %%%%%%%%%%%%%%%%%%%%%
 \documentclass[letterpaper]{cvclass}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -9,8 +9,8 @@
 \cvjobtitle{Estudiante avanzado de Ingeniería en Mecatrónica} % Titulo o trabajo
 
 \cvdate{1 de Marzo de 1999} % Fecha de nacimiento
-\cvaddress{Concordia, Entre Ríos} % Recidencia
-\cvnumberphone{+5493454014944} % Número de telefono
+\cvaddress{Concordia, Entre Ríos} % Residencia
+\cvnumberphone{+5493454014944} % Número de teléfono
 \cvsite{https://github.com/GabiAndi} % Sitio web personal
 \cvmail{gabiandiagui@gmail.com} % Correo electrónico
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -19,12 +19,11 @@
 \begin{document}
 
 % Sobre mi
-\aboutme{Apasionado por la electrónica y programación de bajo nivel.
-Me gusta investigar y aprender sobre nuevas tecnologías, ademas de ampliar mis conocimentos en sistemas de control y automatización.} 
+\aboutme{Apasionado por la electrónica y programación de bajo nivel. Me gusta investigar y aprender sobre nuevas tecnologías, ademas de ampliar mis conocimentos en sistemas de control y automatización.} 
 
 % Sección de habilidades, con escala del 0 al 6 y decimales
 % \skills{{pursuer of rabbits/5.8},{good manners/4},{outgoing/4.3},{polite/4},{Java/0.01}}
-\skills{{Assembly/4.0},{C/5.2},{C++/3.6},{C\#/1.2},{Rust/0.5},{Motores gráficos (Unreal y Unity)/3.2},{Software de ofimática/2.6},{CAD y CAM/1.5},{Latex/3},{Flutter/1}}
+\skills{{Programación de sistemas/4.4},{Sistemas operativos/3.6},{Software de ofimática/2.6},{CAD y CAM/1.5},{Electrónica/3.2},{Mecánica/2},{Controles industriales/4.0}}
 
 % Texto añadido sobre las habilidades personales
 % \skillstext{{lovely/4},{narcissistic/3}}
@@ -52,7 +51,7 @@ Siempre aprender sobre tecnologías emergentes y especializarme el la creación 
 %\twentyitemshort{<Fecha>}{<Titulo/Descripcion>}
 \begin{twentyshort}
 	\twentyitemshort{2016}{Pasante en \href{http://www.dilfer.com.ar/}{Dilfer S.A.}, Sector de infraestructura.}
-	\twentyitemshort{2018-2020}{Tutor par en la Facultad de Ciencias de la Alimentación.}
+	\twentyitemshort{2018-2020}{Tutor par en la \href{https://www.fcal.uner.edu.ar/}{Facultad de Ciencias de la Alimentación de la UNER}.}
 	\twentyitemshort{2021}{Pasante en \href{https://defymotion.com.ar/}{DEFYMOTION S.S.}, Sector de electrónica y programación.}
 \end{twentyshort}
 
@@ -62,7 +61,7 @@ Siempre aprender sobre tecnologías emergentes y especializarme el la creación 
 %\twentyitemshort{<Fecha>}{<Titulo/Descripcion>}
 \begin{twentyshort}
 	\twentyitemshort{2021}{\href{https://www.fcal.uner.edu.ar/prototipo-listo-microbiologia-e-innovacion-en-la-docencia-en-camino/}{UVC, dispositivo para la eliminación de microorganismos por rayos UV tipo C para el protocolo de vuelta a clases en la universidad.}}
-	\twentyitemshort{2021}{\href{https://github.com/GabiAndi/UNER_Tesis/blob/main/Presentacion.pdf}{Control del sistema de aireación en planta de tratamiento de aguas residuales.}}
+	\twentyitemshort{2021}{Control del sistema de aireación en planta de tratamiento de aguas residuales.}
 \end{twentyshort}
 
 \section{Cursos y formación}
@@ -70,18 +69,15 @@ Siempre aprender sobre tecnologías emergentes y especializarme el la creación 
 % Lista con descripción
 %\twentyitem{<Fecha>}{<Titulo>}{<Estado>}{<Descripcion>}
 \begin{twenty}
-	\twentyitem{2017}{REF 2017 realizado en Concordia}{Completo}{Participación en el evento, y asistencia a las charlas sobre energía nuclear.}
-	\twentyitem{2018}{Curso sobre el uso del motor gráfico Unreal Engine 4}{Completo}{Orientado al uso del motor gráfico para proyectos de Ingeniería.}
-	\twentyitem{2019}{Curso sobre el uso del motor gráfico Unity 5}{Completo}{Orientado al uso del motor gráfico para la creación de video juegos.}
-	\twentyitem{2019}{Curso para el desarrollo de aplicaciones Android}{Completo}{Orientado a la creación de APPs nativas en Qt.}
-	\twentyitem{2020}{Curso para el desarrollo en Bare Metal}{Completo}{Orientado a la programación de microcontroladores Cortex-M y microprocesadores Cortex-A.}
-	\twentyitem{2021}{Crédito de Diseño y confeción de planos eléctricos.}{Completo}{Sobre las consideraciones del diseño de planos eléctricos.}
-	\twentyitem{2021}{Crédito de diseño y manufactura de PCBs.}{Completo}{Buenas prácticas a la hora del desarrollo de PCBs y consideraciones para la manufactura.}
-	\twentyitem{2021}{Crédito sobre gestión del mantenimiento.}{Completo}{Orientado al mantenimiento industrial.}
-	\twentyitem{2021}{Crédito de industria 4.0.}{Completo}{Orientado a la implementación de tecnologías Smart Factory para industria.}
+	\twentyitem{2018}{Curso sobre el uso del motor gráfico Unreal Engine.}{Completo}{Orientado a proyectos de Ingeniería.}
+	\twentyitem{2019}{Curso sobre el uso del motor gráfico Unity.}{Completo}{Orientado a la creación de contenido interactivo.}
+	\twentyitem{2020}{Curso para el desarrollo Bare Metal.}{Completo}{Programación de microprocesadores Cortex-M y Cortex-A.}
+	\twentyitem{2021}{Crédito de Diseño y confeción de planos eléctricos.}{Completo}{Planos eléctricos para instalaciones industriales.}
+	\twentyitem{2021}{Crédito de diseño y manufactura de PCBs.}{Completo}{Buenas prácticas a la hora del diseño y la manufactura de PCBs.}
+	\twentyitem{2021}{Crédito sobre gestión del mantenimiento.}{Completo}{Orientado al mantenimiento de equipos industriales.}
+	\twentyitem{2021}{Crédito de industria 4.0.}{Completo}{Implementación de tecnologías 4.0 para industria.}
 	\twentyitem{2021}{Crédito de programación en VHDL.}{Completo}{Orientado a la programación de FPGA.}
-	\twentyitem{2022}{Curso de Flutter.}{Completo}{Orientado a la programación para Android, IOS y Web.}
-	\twentyitem{2022}{Curso de Rust.}{En proceso}{Orientado al desarrollo Web y Bare Metal.}
+	\twentyitem{2022}{Curso para el desarrollo de aplicaciones en Qt.}{Completo}{Creación de APPs multiplataforma con Qt Quick.}
 \end{twenty}
 
 %\section{Referencias}
