--- a/Presentacion.tex
+++ b/Presentacion.tex
@@ -5,8 +5,8 @@
 %%%%%%%%%%%%%%%%%%%% Información personal %%%%%%%%%%%%%%%%%%%%%
 \cvprofilepic{src/images/foto.jpg} % Foto de perfil
 
-\cvname{Gabriel Andrés Aguirre} % Tu nombre
-\cvjobtitle{Estudiante avanzado de Ingeniería en Mecatrónica} % Titulo o trabajo
+\cvname{Gabriel Andrés \\Aguirre} % Tu nombre
+\cvjobtitle{Ingeniero en Mecatrónica} % Titulo o trabajo
 
 \cvdate{1 de Marzo de 1999} % Fecha de nacimiento
 \cvaddress{Concordia, Entre Ríos} % Residencia
@@ -21,13 +21,8 @@
 % Sobre mi
 \aboutme{Apasionado por la electrónica y programación de bajo nivel. Me gusta investigar y aprender sobre nuevas tecnologías, ademas de ampliar mis conocimentos en sistemas de control y automatización.} 
 
-% Sección de habilidades, con escala del 0 al 6 y decimales
-% \skills{{pursuer of rabbits/5.8},{good manners/4},{outgoing/4.3},{polite/4},{Java/0.01}}
-\skills{{Programación de sistemas/4.4},{Sistemas operativos/3.6},{Software de ofimática/2.6},{CAD y CAM/1.5},{Electrónica/3.2},{Mecánica/2},{Controles industriales/4.0}}
-
-% Texto añadido sobre las habilidades personales
-% \skillstext{{lovely/4},{narcissistic/3}}
-\skillstext{}
+% Sección de habilidades, con escala del 0 al 10 y decimales
+\skills{{Programación de sistemas/6.9},{Sistemas operativos/6.2},{Software de ofimática/3.2},{CAD y CAM/2.1},{Electrónica/4.6},{Mecánica/2},{Controles industriales/4.8}}
 
 %%%%%%%%%%%%%%%%%%%%%%% Primera página %%%%%%%%%%%%%%%%%%%%%%%%
 \makeprofile 
@@ -42,7 +37,7 @@ Siempre aprender sobre tecnologías emergentes y especializarme el la creación 
 %\twentyitem{<Fecha>}{<Titulo>}{<Estado>}{<Descripcion>}
 \begin{twenty}
 	\twentyitem{2016}{Bachiller con orientación en Ciencias Naturales}{Completo}{Colegio Nuestra señora de los Angeles}
-	\twentyitem{2017-2022}{Estudiante de Ingeniería en Mecatrónica}{En proceso}{Facultad de Ciencias de la Alimentación de la UNER}
+	\twentyitem{2017-2022}{Ingeniero en Mecatrónica}{Completo}{Facultad de Ciencias de la Alimentación de la UNER}
 \end{twenty}
 
 \section{Experiencia}
@@ -60,8 +55,8 @@ Siempre aprender sobre tecnologías emergentes y especializarme el la creación 
 % Lista corta sin descripción
 %\twentyitemshort{<Fecha>}{<Titulo/Descripcion>}
 \begin{twentyshort}
-	\twentyitemshort{2021}{\href{https://www.fcal.uner.edu.ar/prototipo-listo-microbiologia-e-innovacion-en-la-docencia-en-camino/}{UVC, dispositivo para la eliminación de microorganismos por rayos UV tipo C para el protocolo de vuelta a clases en la universidad.}}
-	\twentyitemshort{2021}{Control del sistema de aireación en planta de tratamiento de aguas residuales.}
+	\twentyitemshort{2021}{\href{https://www.fcal.uner.edu.ar/prototipo-listo-microbiologia-e-innovacion-en-la-docencia-en-camino/}{Dispositivo para la eliminación de microorganismos por rayos UV tipo C para la FCAL UNER.}}
+	\twentyitemshort{2022}{Control del sistema de aireación en planta de tratamiento de aguas residuales (proyecto final de la carrera de Ing. Mecatrónica).}
 \end{twentyshort}
 
 \section{Cursos y formación}
@@ -91,7 +86,7 @@ Siempre aprender sobre tecnologías emergentes y especializarme el la creación 
 
 %\section{Mas info}
 
-%Mas información
+% Certificados
 
 \end{document}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
